WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/Credit_Override__c.object-meta.xml
<CustomObject>
    <description>The credit override objects to be attached to an Account.</description>
    <label>Credit Override</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Credit Override Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>