WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Overrides</relationshipLabel>
    <relationshipName>Credit_Overrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>