WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Overrides_As_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>