WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>