WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>