WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>