WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Override_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Urgent customer request</fullName>
            </value>
            <value>
                <fullName>High priority customer</fullName>
            </value>
            <value>
                <fullName>Good will gesture</fullName>
            </value>
            <value>
                <fullName>Customer payment delays</fullName>
            </value>
            <value>
                <fullName>WEX payment processing delay</fullName>
            </value>
            <value>
                <fullName>Customer accounting error</fullName>
            </value>
            <value>
                <fullName>Invoice not received</fullName>
            </value>
            <value>
                <fullName>Security exception</fullName>
            </value>
            <value>
                <fullName>Security not provided; weak payment grade</fullName>
            </value>
            <value>
                <fullName>Security not provided; litigation</fullName>
            </value>
            <value>
                <fullName>Security not provided; business &lt; 1 year old</fullName>
            </value>
            <value>
                <fullName>Dishonoured payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>