WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Date__c</fullName>
    <description>credit override date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Date</label>
    <type>Date</type>
</CustomField>