WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Override_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Status__c</fullName>
    <label>Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>