WexGit/Wex_DX/force-app/main/default/objects/Credit_Override__c/fields/Override_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Type__c</fullName>
    <description>Override type for the Account</description>
    <label>Override Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Limit (TCL) Override</fullName>
            </value>
            <value>
                <fullName>Overdue (AOT) Override</fullName>
            </value>
            <value>
                <fullName>Security Exception</fullName>
            </value>
            <value>
                <fullName>Dishonoured Payment Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>